--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
 </head>
 <body>
     <header>
-
+          <nav class="menu">
+            <h1>Bangladesh 2.0</h1>
+            <button>Sign In</button>
+          </nav>
+          <div class="banner">
+            <div class="banner-container">
+            <p class="sub-title">Bangladesh 2.0</p>
+            <h1 class="title">Idea , innovation , vision and challenges in New Bangladesh.</h1>
+            <button class="btn">Explore New Bangladesh</button>
+        </div>
+            <img src="assets/hero.png" alt="national martyr's memorial">
+          </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
