--- a/index.html
+++ b/index.html
@@ -22,7 +22,31 @@
           </div>
     </header>
     <main>
-
+         <section class="pillar-section">
+            <h1>Pillars of "Bangladesh 2.0"</h1>
+            <div class="pillar-container">
+                <div class="pillar">
+                    <img src="assets/card-icon.png" alt="">
+                    <h1>Innovation</h1>
+                    <p class="description">sit amet consectetur elit. Facilis quas, ducimus labore sequi quos </p>
+                </div>
+                <div class="pillar">
+                    <img src="assets/card-icon.png" alt="">
+                    <h1>Sustainability</h1>
+                    <p class="description">Bangladesh has made significant strides in sustainability through renewable energy  </p>
+                </div>
+                <div class="pillar">
+                    <img src="assets/card-icon.png" alt="">
+                    <h1>Infrastructure</h1>
+                    <p class="description">Bangladesh's infrastructure is rapidly developing, with major investments </p>
+                </div>
+                <div class="pillar">
+                    <img src="assets/card-icon.png" alt="">
+                    <h1>Empowerment</h1>
+                    <p class="description">Bangladesh has made remarkable progress in empowerment, particularly</p>
+                </div>
+            </div>
+         </section>
     </main>
     <footer>
 
