--- a/index.html
+++ b/index.html
@@ -47,6 +47,30 @@
                 </div>
             </div>
          </section>
+         <section id="future">
+              <h1>The Vision of Future</h1>
+              <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+              <div class="card-container">
+                <div class="card" style="background-color: rgba(84, 144, 245, 0.2);">
+                    <img src="assets/card-icon.png" alt="">
+                    <h1>Digital Transformation</h1>
+                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="btn-1">Learn More</button>
+                </div>
+                <div class="card" style="background-color: rgb(198, 228, 214);">
+                    <img src="assets/card-icon.png" alt="">
+                    <h1>Green Energy</h1>
+                    <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="btn-2">Learn More</button>
+                </div>
+                <div class="card" style="background-color: rgb(247, 235, 207);">
+                    <img src="assets/card-icon.png" alt="">
+                    <h1>Modern Infrastructure</h1>
+                    <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="btn-3">Learn More</button>
+                </div>
+              </div>
+         </section>
     </main>
     <footer>
 
