--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                 </div>
               </div>
          </section>
+         <section id="yunus">
+            <p class="description">Dr. Muhammad Yunus, a Bangladeshi economist and Nobel Peace Prize laureate, is renowned as the "Father of Microfinance" for founding Grameen Bank, which empowers millions through small loans.His innovative efforts have significantly contributed to poverty alleviation and social development in Bangladesh.</p>
+            <h1>Dr. Muhammad Yunus</h1>
+            <p class="sub-title">Chief Adviser of the People's Republic of Bangladesh</p>
+         </section>
     </main>
     <footer>
 
