--- a/index.html
+++ b/index.html
@@ -76,6 +76,68 @@
             <h1>Dr. Muhammad Yunus</h1>
             <p class="sub-title">Chief Adviser of the People's Republic of Bangladesh</p>
          </section>
+         <!-- <section id="opinion">
+            <h1 class="headline">Your Opinion Matters</h1>
+            <table>
+                <thead>
+                    <div>
+                        <p>Questions</p>
+                        <p>Select Your Opinion</p>
+                    </div>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                        <td><select name="" id=""></select></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+         </section> -->
+
+         <section class="recent">
+              <h1 class="headline">Recent News</h1>
+              <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+             <div class="container">
+                <div class="card-1">
+                    <img src="assets/satelite.png" alt="" class="card-img">
+                     <div class="card-detail">
+                        <h1 class="headline">Bangladesh Launches New Satellite</h1>
+                        <img src="assets/al-jazeera.png" alt="" class="aljezeera">
+                        <p class="paragraph">Date: 05/01/2025   Time: 10.25 PM</p>
+                         <p class="paragraph">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="btn">Read More</button>
+                     </div>
+                </div>
+                
+                <div class="card-2">
+                     <div class="card-detail">
+                        <h1 class="headline">Bangladesh Launches New Satellite</h1>
+                        <img src="assets/al-jazeera.png" alt="" class="aljezeera">
+                        <p class="paragraph">Date: 05/01/2025   Time: 10.25 PM</p>
+                         <p class="paragraph">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="btn">Read More</button>
+                     </div>
+                     <img src="assets/satelite.png" alt="" class="card-img">
+                </div>
+                <div class="card-3">
+                    <img src="assets/satelite.png" alt="" class="card-img">
+                     <div class="card-detail">
+                        <h1 class="headline">Bangladesh Launches New Satellite</h1>
+                        <img src="assets/al-jazeera.png" alt="" class="aljezeera">
+                        <p class="paragraph">Date: 05/01/2025   Time: 10.25 PM</p>
+                         <p class="paragraph">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,with a certain degree of justification, be able to speak of humankind as civilized</p>
+                        <button class="btn">Read More</button>
+                     </div>
+                </div>
+
+          </div>
+             
+
+         </section>
     </main>
     <footer>
 
