--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
           </nav>
           <div class="banner">
             <div class="banner-container">
-            <p class="sub-title">Bangladesh 2.0</p>
+            <p class="sub-title" style="background-color: rgb(198, 228, 214);">Bangladesh 2.0</p>
             <h1 class="title">Idea , innovation , vision and challenges in New Bangladesh.</h1>
             <button class="btn">Explore New Bangladesh</button>
         </div>
-            <img src="assets/hero.png" alt="national martyr's memorial">
+            <img src="assets/hero.png" alt="national martyr's memorial" style="background-color: rgb(198, 228, 214)">
           </div>
     </header>
     <main>
@@ -49,24 +49,24 @@
          </section>
          <section id="future">
               <h1>The Vision of Future</h1>
-              <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+              <p style="background-color: #f1f1f3;">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
               <div class="card-container">
-                <div class="card" style="background-color: rgba(84, 144, 245, 0.2);">
-                    <img src="assets/card-icon.png" alt="">
+                <div class="card" style="background-color: rgba(84, 144, 245,0.2);">
+                    <img src="assets/card-icon.png" alt="" class="bg">
                     <h1>Digital Transformation</h1>
-                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <p class="bg">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
                     <button class="btn-1">Learn More</button>
                 </div>
                 <div class="card" style="background-color: rgb(198, 228, 214);">
-                    <img src="assets/card-icon.png" alt="">
+                    <img src="assets/card-icon.png" alt="" style="background-color: rgb(198, 228, 214);">
                     <h1>Green Energy</h1>
-                    <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <p style="background-color: rgb(198, 228, 214);">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
                     <button class="btn-2">Learn More</button>
                 </div>
                 <div class="card" style="background-color: rgb(247, 235, 207);">
-                    <img src="assets/card-icon.png" alt="">
+                    <img src="assets/card-icon.png" alt="" style="background-color: rgb(247, 235, 207);">
                     <h1>Modern Infrastructure</h1>
-                    <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <p style="background-color: rgb(247, 235, 207);">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
                     <button class="btn-3">Learn More</button>
                 </div>
               </div>
@@ -76,31 +76,11 @@
             <h1>Dr. Muhammad Yunus</h1>
             <p class="sub-title">Chief Adviser of the People's Republic of Bangladesh</p>
          </section>
-         <!-- <section id="opinion">
-            <h1 class="headline">Your Opinion Matters</h1>
-            <table>
-                <thead>
-                    <div>
-                        <p>Questions</p>
-                        <p>Select Your Opinion</p>
-                    </div>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
-                        <td><select name="" id=""></select></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
-         </section> -->
+     
 
          <section class="recent">
               <h1 class="headline">Recent News</h1>
-              <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+              <p style="background-color: #f1f1f3;">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
              <div class="container">
                 <div class="card-1">
                     <img src="assets/satelite.png" alt="" class="card-img">
@@ -136,11 +116,55 @@
 
           </div>
          </section>
+         <section class="donate">
+              <h1 class="donate-title">Donate Today</h1>
+              <p class="donate-detail" style="background-color: #f1f1f3;">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+              <div class="money-container">
+                <div class="amount">
+                    <h1 class="tk">100 Taka</h1>
+                  </div>
+                  <div class="amount">
+                    <h1 class="tk">200 Taka</h1>
+                  </div>
+                  <div class="amount">
+                    <h1 class="tk">500 Taka</h1>
+                  </div>
+                  <div class="amount">
+                    <h1 class="tk">1000 Taka</h1>
+                  </div>
+              </div>
+              <div class="other">
+                <input type="number" class="other-amount" placeholder="Other Amount (Taka)">
+              </div>
+              <div class="donate-btn">
+                <button class="btn">Done Now</button>
+              </div>
+         </section>
 
 
+         <section class="letter">
+            <h1 class="letter-title">Subscribe Newsletter</h1>
+            <p class="letter-description" style=" background: rgb(198, 228, 214);">
+                Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.
+            </p>
+            <div class="info">
+                    <input class="email" type="email" name="email" placeholder="Enter your email here">
+                  
+                    <button class="subs-btn">Subscribe</button>
+            </div>
+            <p class="letter-description" style=" background: rgb(198, 228, 214);">We promise not to spam you!</p>
+         </section>
     </main>
-    <footer>
-
+    <footer style="background: rgb(255, 255, 255);">
+            <div class="footer">
+                <h1 class="footer-head">Bangladesh 2.0</h1>
+                <hr style="border: 1px solid rgba(14, 14, 14, 0.1); width: 70%;">
+                <div class="footer-icon">
+                    <a href=""><img src="assets/facebook.png" alt=""></a>
+                    <a href=""><img src="assets/instagram.png" alt=""></a>
+                    <a href=""><img src="assets/x.png" alt=""></a>
+                </div>
+            </div>
     </footer>
 </body>
 </html>
