--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
           <nav class="menu">
             <h1>Bangladesh 2.0</h1>
-            <button>Sign In</button>
+            <button class="btn-style">Sign In</button>
           </nav>
           <div class="banner">
             <div class="banner-container">
@@ -77,6 +77,46 @@
             <p class="sub-title">Chief Adviser of the People's Republic of Bangladesh</p>
          </section>
      
+         <section class="Opinion">
+            <h1 class="title">Your Opinion Matters</h1>
+            <div class="opinion-container">
+                <div class="t-head">
+                    <p class="t-title" style="background:  rgb(198, 228, 214);">Questions</p>
+                    <p class="t-title" style="background:  rgb(198, 228, 214);">Select Your Opinion</p>
+                </div>
+                <table>
+                    <tr>
+                        <th>Do you believe Bangladesh is on the right path toward becoming a developed nation?</th>
+                        <th class="t-opinion">
+                            <select name="choice" id="">
+                                <option class="options" value="">Yes, I Agree</option>
+                                <option class="options" value="">No, I Disagree.</option>
+                            </select>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Do you believe the Interim Government of Bangladesh going to the right way?</th>
+                        <th class="t-opinion">
+                            <select name="choice" id="">
+                                <option class="options" value="">Yes, I Agree</option>
+                                <option class="options" value="">No, I Disagree.</option>
+                            </select>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>Do you believe Bangladesh is on the right path toward becoming a smart & digital
+                            nation?</th>
+                        <th class="t-opinion">
+                            <select name="choice" id="">
+                                <option class="options" value="">Yes, I Agree</option>
+                                <option class="options" value="">No, I Disagree.</option>
+                            </select>
+                        </th>
+                    </tr>
+                </table>
+            </div>
+ 
+        </section>
 
          <section class="recent">
               <h1 class="headline">Recent News</h1>
